# qorechain-pqc

./: .gitignore  DESIGN.md  PUBLISHING.md  README.md
.github/workflows/: ci.yml  publish.yml
c/: Makefile  README.md  qorechain_pqc.c  qorechain_pqc.h  test_vectors.c
go/: README.md  go.mod  pqc.go  pqc_test.go
java/: README.md  pom.xml
java/src/main/java/network/qorechain/pqc/: Pqc.java
java/src/test/java/network/qorechain/pqc/: VectorsTest.java
js/: README.md  package-lock.json  package.json
js/src/: index.d.ts  index.js
js/test/: vectors.test.mjs
python/: README.md  pyproject.toml
python/qorpqc/: __init__.py
python/tests/: test_vectors.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: vectors.rs
scripts/: gen-vectors.mjs  package-lock.json  package.json
vectors/: flat.txt  ml-dsa-44.json  ml-dsa-65.json  ml-dsa-87.json  ml-kem-1024.json  ml-kem-512.json  ml-kem-768.json  shake-256.json
